fail_crate/tests/const_and_default.rs
use inew::New;

#[derive(New)]
#[new(const)]
struct A {
    #[new(default)]
    x: u32
}

fn main() {}
